# NaturalChat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_EN.md  README_ZH.md  config.example.yaml  deploy.sh  docker-compose.dev.yaml  docker-compose.yml  eslint.config.mjs  install.defaults.example  install.py  install.sh  main.py  manage.py  nctl.sh  package.json  pyproject.toml  requirements.txt  test_bot.py  tsconfig.json  uninstall.sh
.github/workflows/: docker-publish.yml
.specify/: init-options.json
.specify/memory/: constitution.md  prd.md
bots/_template/: config.yaml  secrets.yaml
bots/example/: config.yaml  secrets.yaml
common_skills/ask_friend/: SKILL.md
common_skills/clone_self/: SKILL.md
common_skills/execute_python/: SKILL.md
common_skills/manage_skills/: SKILL.md
common_skills/notes_manager/: SKILL.md
config/: config.template.yaml  secrets.template.yaml
deploy/: bootstrap-runtime.sh  deploy.sh  memobase-compose.yml  naturalchat4.service  render_memobase_config.py  setup-memobase.sh  setup-vps.sh
docker/: Dockerfile  Dockerfile.sandbox  conduit.toml  docker-compose.yml
docs/: PRD_SPEC.md  PRD_SPEC_ZH.md  PROJECT_FILES.md
prompts/default/: critic.md  (+4 more)
scripts/: install.sh  nctl.sh  uninstall.sh
src/: __init__.py  bot_brain.py  bot_config.py  bot_instance.py  bot_manager.py  bot_packager.py  command_router.py  config_validation.py  contact_ids.py  contact_migration.py  index.ts  llm_agent.py  memory_manager.py  prompt_store.py  sandbox.py  skill_loader.py  token_auditor.py
(+112 files in other folders)
